crates/store/re_chunk_store/tests/integration/snapshots/integration__dataframe__schema_static_columns-2.snap
---
source: crates/store/re_chunk_store/tests/integration/dataframe.rs
expression: static_only
---
[
    "baz",
    "foo",
    "yak",
]
