crates/store/re_chunk_store/tests/integration/snapshots/integration__dataframe__schema_static_columns-3.snap
---
source: crates/store/re_chunk_store/tests/integration/dataframe.rs
expression: non_static_only
---
[
    "example.MyPoints:points",
]
