crates/store/re_chunk_store/tests/integration/snapshots/integration__dataframe__schema_static_columns.snap
---
source: crates/store/re_chunk_store/tests/integration/dataframe.rs
expression: both_static_and_non_static
---
[
    "baz",
    "foo",
    "yak",
    "example.MyPoints:points",
]
